@@ -1,24 +1,18 @@
 package com.emie.designpm.admin.service;
 
-import com.emie.designpm.auth.PasswordHasher;
-import com.emie.designpm.auth.AuthSessions;
-import com.emie.designpm.entity.Role;
-import com.emie.designpm.entity.SystemConfig;
-import com.emie.designpm.entity.User;
-import com.emie.designpm.util.TextEncodingUtil;
 import com.emie.designpm.admin.repository.RoleRepository;
 import com.emie.designpm.admin.repository.SystemConfigRepository;
 import com.emie.designpm.admin.repository.UserRepository;
-import com.emie.designpm.util.SecurityUtil;
+import com.emie.designpm.auth.AuthSessions;
+import com.emie.designpm.auth.PasswordHasher;
 import com.emie.designpm.dto.PageResponse;
+import com.emie.designpm.entity.Role;
+import com.emie.designpm.entity.SystemConfig;
+import com.emie.designpm.entity.User;
+import com.emie.designpm.util.SecurityUtil;
+import com.emie.designpm.util.TextEncodingUtil;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.dao.DataAccessException;
-import org.springframework.web.multipart.MultipartFile;
-
 import jakarta.annotation.PostConstruct;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
@@ -27,11 +21,15 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
-import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.dao.DataAccessException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
 @Service
 public class AdminService {
@@ -69,8 +67,11 @@ public class AdminService {
 
     private Path uploadPath;
 
-    public AdminService(SystemConfigRepository configRepository, UserRepository userRepository,
-                        RoleRepository roleRepository, UserService userService) {
+    public AdminService(
+            SystemConfigRepository configRepository,
+            UserRepository userRepository,
+            RoleRepository roleRepository,
+            UserService userService) {
         this.configRepository = configRepository;
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
@@ -93,120 +94,413 @@ public class AdminService {
 
     private void initDefaultConfigs() {
         List<SystemConfig> defaults = new ArrayList<>(Arrays.asList(
-            // ===== 外观配置 =====
-            SystemConfig.builder().configKey("app.title").configValue("产品管理系统").configGroup("appearance")
-                .description("系统标题").valueType("text").sortOrder(1).build(),
-            SystemConfig.builder().configKey("app.logo").configValue("").configGroup("appearance")
-                .description("系统 Logo（上传图片后自动填充路径）").valueType("image").sortOrder(2).build(),
-            SystemConfig.builder().configKey("app.logoEmoji").configValue("🎨").configGroup("appearance")
-                .description("Logo 备用 Emoji（无图片时显示）").valueType("text").sortOrder(3).build(),
-            SystemConfig.builder().configKey("app.subtitle").configValue("EMIE Design Project Management").configGroup("appearance")
-                .description("系统副标题").valueType("text").sortOrder(4).build(),
-            SystemConfig.builder().configKey("login.bg").configValue("").configGroup("appearance")
-                .description("登录页背景图片路径").valueType("image").sortOrder(5).build(),
-            SystemConfig.builder().configKey("login.bgColor").configValue("#F3F4F6").configGroup("appearance")
-                .description("登录页背景色（无图片时使用）").valueType("text").sortOrder(6).build(),
+                // ===== 外观配置 =====
+                SystemConfig.builder()
+                        .configKey("app.title")
+                        .configValue("产品管理系统")
+                        .configGroup("appearance")
+                        .description("系统标题")
+                        .valueType("text")
+                        .sortOrder(1)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("app.logo")
+                        .configValue("")
+                        .configGroup("appearance")
+                        .description("系统 Logo（上传图片后自动填充路径）")
+                        .valueType("image")
+                        .sortOrder(2)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("app.logoEmoji")
+                        .configValue("🎨")
+                        .configGroup("appearance")
+                        .description("Logo 备用 Emoji（无图片时显示）")
+                        .valueType("text")
+                        .sortOrder(3)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("app.subtitle")
+                        .configValue("EMIE Design Project Management")
+                        .configGroup("appearance")
+                        .description("系统副标题")
+                        .valueType("text")
+                        .sortOrder(4)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("login.bg")
+                        .configValue("")
+                        .configGroup("appearance")
+                        .description("登录页背景图片路径")
+                        .valueType("image")
+                        .sortOrder(5)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("login.bgColor")
+                        .configValue("#F3F4F6")
+                        .configGroup("appearance")
+                        .description("登录页背景色（无图片时使用）")
+                        .valueType("text")
+                        .sortOrder(6)
+                        .build(),
 
-            // ===== 安全配置 =====
-            SystemConfig.builder().configKey("security.passwordMinLen").configValue("6").configGroup("security")
-                .description("密码最小长度").valueType("number").sortOrder(1).build(),
-            SystemConfig.builder().configKey("security.sessionTimeout").configValue("3600").configGroup("security")
-                .description("会话超时时间（秒）").valueType("number").sortOrder(2).build(),
-            SystemConfig.builder().configKey("security.rateLimit").configValue("30").configGroup("security")
-                .description("登录频率限制（每分钟请求数）").valueType("number").sortOrder(3).build(),
+                // ===== 安全配置 =====
+                SystemConfig.builder()
+                        .configKey("security.passwordMinLen")
+                        .configValue("6")
+                        .configGroup("security")
+                        .description("密码最小长度")
+                        .valueType("number")
+                        .sortOrder(1)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("security.sessionTimeout")
+                        .configValue("3600")
+                        .configGroup("security")
+                        .description("会话超时时间（秒）")
+                        .valueType("number")
+                        .sortOrder(2)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("security.rateLimit")
+                        .configValue("30")
+                        .configGroup("security")
+                        .description("登录频率限制（每分钟请求数）")
+                        .valueType("number")
+                        .sortOrder(3)
+                        .build(),
 
-            // ===== 系统信息 =====
-            SystemConfig.builder().configKey("system.dbType").configValue("").configGroup("system")
-                .description("数据库类型（自动检测）").valueType("text").sortOrder(1).build(),
-            SystemConfig.builder().configKey("system.dbUrl").configValue("").configGroup("system")
-                .description("数据库连接地址（自动检测）").valueType("text").sortOrder(2).build(),
-            SystemConfig.builder().configKey("system.version").configValue("1.0.0").configGroup("system")
-                .description("系统版本号").valueType("text").sortOrder(3).build(),
-            SystemConfig.builder().configKey("system.fileUploadMaxSize").configValue("1024").configGroup("system")
-                .description("文件上传最大限制（MB）").valueType("number").sortOrder(4).build(),
+                // ===== 系统信息 =====
+                SystemConfig.builder()
+                        .configKey("system.dbType")
+                        .configValue("")
+                        .configGroup("system")
+                        .description("数据库类型（自动检测）")
+                        .valueType("text")
+                        .sortOrder(1)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("system.dbUrl")
+                        .configValue("")
+                        .configGroup("system")
+                        .description("数据库连接地址（自动检测）")
+                        .valueType("text")
+                        .sortOrder(2)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("system.version")
+                        .configValue("1.0.0")
+                        .configGroup("system")
+                        .description("系统版本号")
+                        .valueType("text")
+                        .sortOrder(3)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("system.fileUploadMaxSize")
+                        .configValue("1024")
+                        .configGroup("system")
+                        .description("文件上传最大限制（MB）")
+                        .valueType("number")
+                        .sortOrder(4)
+                        .build(),
 
-            // ===== 飞书统一应用 =====
-            SystemConfig.builder().configKey("feishu.ssoAppId").configValue("").configGroup("feishu")
-                .description("飞书统一应用 App ID（SSO、通知、多维表格）").valueType("text").sortOrder(1).build(),
-            SystemConfig.builder().configKey("feishu.ssoAppSecret").configValue("").configGroup("feishu")
-                .description("飞书统一应用 App Secret").valueType("password").sortOrder(2).build(),
-            SystemConfig.builder().configKey("feishu.enabled").configValue("false").configGroup("feishu")
-                .description("启用飞书 SSO 登录").valueType("boolean").sortOrder(3).build(),
+                // ===== 飞书统一应用 =====
+                SystemConfig.builder()
+                        .configKey("feishu.ssoAppId")
+                        .configValue("")
+                        .configGroup("feishu")
+                        .description("飞书统一应用 App ID（SSO、通知、多维表格）")
+                        .valueType("text")
+                        .sortOrder(1)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.ssoAppSecret")
+                        .configValue("")
+                        .configGroup("feishu")
+                        .description("飞书统一应用 App Secret")
+                        .valueType("password")
+                        .sortOrder(2)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.enabled")
+                        .configValue("false")
+                        .configGroup("feishu")
+                        .description("启用飞书 SSO 登录")
+                        .valueType("boolean")
+                        .sortOrder(3)
+                        .build(),
 
-            // ===== 评分权重 =====
-            SystemConfig.builder().configKey("scoring.channel_custom.planner").configValue("40").configGroup("scoring")
-                .description("渠道定制单 - 企划评分权重(%)").valueType("number").sortOrder(1).build(),
-            SystemConfig.builder().configKey("scoring.channel_custom.sales").configValue("30").configGroup("scoring")
-                .description("渠道定制单 - 销售评分权重(%)").valueType("number").sortOrder(2).build(),
-            SystemConfig.builder().configKey("scoring.channel_custom.designer").configValue("20").configGroup("scoring")
-                .description("渠道定制单 - 设计师自评权重(%)").valueType("number").sortOrder(3).build(),
-            SystemConfig.builder().configKey("scoring.channel_custom.admin").configValue("10").configGroup("scoring")
-                .description("渠道定制单 - 管理评分权重(%)").valueType("number").sortOrder(4).build(),
-            SystemConfig.builder().configKey("scoring.regular.planner").configValue("40").configGroup("scoring")
-                .description("公司常规品 - 企划评分权重(%)").valueType("number").sortOrder(5).build(),
-            SystemConfig.builder().configKey("scoring.regular.sales").configValue("10").configGroup("scoring")
-                .description("公司常规品 - 销售评分权重(%)").valueType("number").sortOrder(6).build(),
-            SystemConfig.builder().configKey("scoring.regular.designer").configValue("20").configGroup("scoring")
-                .description("公司常规品 - 设计师自评权重(%)").valueType("number").sortOrder(7).build(),
-            SystemConfig.builder().configKey("scoring.regular.admin").configValue("30").configGroup("scoring")
-                .description("公司常规品 - 管理评分权重(%)").valueType("number").sortOrder(8).build(),
+                // ===== 评分权重 =====
+                SystemConfig.builder()
+                        .configKey("scoring.channel_custom.planner")
+                        .configValue("40")
+                        .configGroup("scoring")
+                        .description("渠道定制单 - 企划评分权重(%)")
+                        .valueType("number")
+                        .sortOrder(1)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("scoring.channel_custom.sales")
+                        .configValue("30")
+                        .configGroup("scoring")
+                        .description("渠道定制单 - 销售评分权重(%)")
+                        .valueType("number")
+                        .sortOrder(2)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("scoring.channel_custom.designer")
+                        .configValue("20")
+                        .configGroup("scoring")
+                        .description("渠道定制单 - 设计师自评权重(%)")
+                        .valueType("number")
+                        .sortOrder(3)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("scoring.channel_custom.admin")
+                        .configValue("10")
+                        .configGroup("scoring")
+                        .description("渠道定制单 - 管理评分权重(%)")
+                        .valueType("number")
+                        .sortOrder(4)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("scoring.regular.planner")
+                        .configValue("40")
+                        .configGroup("scoring")
+                        .description("公司常规品 - 企划评分权重(%)")
+                        .valueType("number")
+                        .sortOrder(5)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("scoring.regular.sales")
+                        .configValue("10")
+                        .configGroup("scoring")
+                        .description("公司常规品 - 销售评分权重(%)")
+                        .valueType("number")
+                        .sortOrder(6)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("scoring.regular.designer")
+                        .configValue("20")
+                        .configGroup("scoring")
+                        .description("公司常规品 - 设计师自评权重(%)")
+                        .valueType("number")
+                        .sortOrder(7)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("scoring.regular.admin")
+                        .configValue("30")
+                        .configGroup("scoring")
+                        .description("公司常规品 - 管理评分权重(%)")
+                        .valueType("number")
+                        .sortOrder(8)
+                        .build(),
 
-            // ===== NAS 归档 =====
-            SystemConfig.builder().configKey("nas.enabled").configValue("false").configGroup("nas")
-                .description("启用 NAS 归档").valueType("boolean").sortOrder(1).build(),
-            SystemConfig.builder().configKey("nas.host").configValue("").configGroup("nas")
-                .description("NAS IP 地址").valueType("text").sortOrder(2).build(),
-            SystemConfig.builder().configKey("nas.user").configValue("root").configGroup("nas")
-                .description("NAS SSH 用户名").valueType("text").sortOrder(3).build(),
-            SystemConfig.builder().configKey("nas.password").configValue("").configGroup("nas")
-                .description("NAS SSH 密码").valueType("password").sortOrder(4).build(),
-            SystemConfig.builder().configKey("nas.path").configValue("/volume1/emie-archive").configGroup("nas")
-                .description("NAS 存储路径").valueType("text").sortOrder(5).build(),
+                // ===== NAS 归档 =====
+                SystemConfig.builder()
+                        .configKey("nas.enabled")
+                        .configValue("false")
+                        .configGroup("nas")
+                        .description("启用 NAS 归档")
+                        .valueType("boolean")
+                        .sortOrder(1)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("nas.host")
+                        .configValue("")
+                        .configGroup("nas")
+                        .description("NAS IP 地址")
+                        .valueType("text")
+                        .sortOrder(2)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("nas.user")
+                        .configValue("root")
+                        .configGroup("nas")
+                        .description("NAS SSH 用户名")
+                        .valueType("text")
+                        .sortOrder(3)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("nas.password")
+                        .configValue("")
+                        .configGroup("nas")
+                        .description("NAS SSH 密码")
+                        .valueType("password")
+                        .sortOrder(4)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("nas.path")
+                        .configValue("/volume1/emie-archive")
+                        .configGroup("nas")
+                        .description("NAS 存储路径")
+                        .valueType("text")
+                        .sortOrder(5)
+                        .build(),
 
-            // ===== 飞书多维表格同步 =====
-            SystemConfig.builder().configKey("feishu.base.syncEnabled").configValue("false").configGroup("feishu_base")
-                .description("启用飞书多维表格同步").valueType("boolean").sortOrder(1).build(),
-            SystemConfig.builder().configKey("feishu.base.appToken").configValue("").configGroup("feishu_base")
-                .description("飞书 Base App Token").valueType("text").sortOrder(2).build(),
-            SystemConfig.builder().configKey("feishu.base.tableProjects").configValue("").configGroup("feishu_base")
-                .description("项目总表 Table ID").valueType("text").sortOrder(3).build(),
-            SystemConfig.builder().configKey("feishu.base.tableTasks").configValue("").configGroup("feishu_base")
-                .description("子任务表 Table ID").valueType("text").sortOrder(4).build(),
-            SystemConfig.builder().configKey("feishu.base.tableScoring").configValue("").configGroup("feishu_base")
-                .description("评分记录表 Table ID").valueType("text").sortOrder(5).build(),
-            SystemConfig.builder().configKey("feishu.base.tableProjectsBackup").configValue("").configGroup("feishu_base")
-                .description("项目备份表 Table ID").valueType("text").sortOrder(6).build(),
-            SystemConfig.builder().configKey("feishu.base.tableTasksBackup").configValue("").configGroup("feishu_base")
-                .description("子任务备份表 Table ID").valueType("text").sortOrder(7).build(),
-            SystemConfig.builder().configKey("feishu.base.tableScoringBackup").configValue("").configGroup("feishu_base")
-                .description("评分备份表 Table ID").valueType("text").sortOrder(8).build(),
-            SystemConfig.builder().configKey("feishu.base.tableLogsBackup").configValue("").configGroup("feishu_base")
-                .description("操作日志备份表 Table ID").valueType("text").sortOrder(9).build(),
-            SystemConfig.builder().configKey("feishu.base.tableLogs").configValue("").configGroup("feishu_base")
-                .description("操作日志表 Table ID").valueType("text").sortOrder(10).build(),
-            SystemConfig.builder().configKey("feishu.base.fieldMappings").configValue("{}").configGroup("feishu_base")
-                .description("飞书同步字段选择及目标列映射（由字段配置页面维护）").valueType("textarea").sortOrder(11).build(),
+                // ===== 飞书多维表格同步 =====
+                SystemConfig.builder()
+                        .configKey("feishu.base.syncEnabled")
+                        .configValue("false")
+                        .configGroup("feishu_base")
+                        .description("启用飞书多维表格同步")
+                        .valueType("boolean")
+                        .sortOrder(1)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.appToken")
+                        .configValue("")
+                        .configGroup("feishu_base")
+                        .description("飞书 Base App Token")
+                        .valueType("text")
+                        .sortOrder(2)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.tableProjects")
+                        .configValue("")
+                        .configGroup("feishu_base")
+                        .description("项目总表 Table ID")
+                        .valueType("text")
+                        .sortOrder(3)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.tableTasks")
+                        .configValue("")
+                        .configGroup("feishu_base")
+                        .description("子任务表 Table ID")
+                        .valueType("text")
+                        .sortOrder(4)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.tableScoring")
+                        .configValue("")
+                        .configGroup("feishu_base")
+                        .description("评分记录表 Table ID")
+                        .valueType("text")
+                        .sortOrder(5)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.tableProjectsBackup")
+                        .configValue("")
+                        .configGroup("feishu_base")
+                        .description("项目备份表 Table ID")
+                        .valueType("text")
+                        .sortOrder(6)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.tableTasksBackup")
+                        .configValue("")
+                        .configGroup("feishu_base")
+                        .description("子任务备份表 Table ID")
+                        .valueType("text")
+                        .sortOrder(7)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.tableScoringBackup")
+                        .configValue("")
+                        .configGroup("feishu_base")
+                        .description("评分备份表 Table ID")
+                        .valueType("text")
+                        .sortOrder(8)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.tableLogsBackup")
+                        .configValue("")
+                        .configGroup("feishu_base")
+                        .description("操作日志备份表 Table ID")
+                        .valueType("text")
+                        .sortOrder(9)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.tableLogs")
+                        .configValue("")
+                        .configGroup("feishu_base")
+                        .description("操作日志表 Table ID")
+                        .valueType("text")
+                        .sortOrder(10)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("feishu.base.fieldMappings")
+                        .configValue("{}")
+                        .configGroup("feishu_base")
+                        .description("飞书同步字段选择及目标列映射（由字段配置页面维护）")
+                        .valueType("textarea")
+                        .sortOrder(11)
+                        .build(),
 
-            // ===== 通知中心 =====
-            SystemConfig.builder().configKey("notification.enabled").configValue("true").configGroup("notification")
-                .description("启用通知中心（关闭后仅保留已有审计，不创建新通知）").valueType("boolean").sortOrder(1).build(),
-            SystemConfig.builder().configKey("notification.inAppEnabled").configValue("true").configGroup("notification")
-                .description("启用站内通知；关键任务、审核、驳回和催办始终按必达规则处理").valueType("boolean").sortOrder(2).build(),
-            SystemConfig.builder().configKey("notification.feishuEnabled").configValue("false").configGroup("notification")
-                .description("启用飞书机器人外送（需先完成机器人权限、用户 OpenID 和卡片回调配置）").valueType("boolean").sortOrder(3).build(),
-            SystemConfig.builder().configKey("notification.publicBaseUrl").configValue("").configGroup("notification")
-                .description("系统公网访问地址，例如 https://pm.example.com；飞书卡片“查看并处理”将跳转到此地址").valueType("text").sortOrder(4).build(),
-            SystemConfig.builder().configKey("notification.deliveryRetryLimit").configValue("8").configGroup("notification")
-                .description("外部渠道最大重试次数，超出后进入失败队列并告警管理员").valueType("number").sortOrder(5).build(),
-            SystemConfig.builder().configKey("notification.reminderMinIntervalMinutes").configValue("10").configGroup("notification")
-                .description("同一催办人对同一项目或任务的最短催办间隔（分钟）").valueType("number").sortOrder(6).build(),
-            SystemConfig.builder().configKey("notification.reminderCrossUserMergeMinutes").configValue("30").configGroup("notification")
-                .description("不同催办人的展示合并窗口（分钟）；不会删除任何原始审计或必达通知").valueType("number").sortOrder(7).build(),
-            SystemConfig.builder().configKey("notification.overdueEscalationHours").configValue("24").configGroup("notification")
-                .description("逾期后升级提醒负责人或管理员的等待时长（小时）").valueType("number").sortOrder(8).build(),
-            SystemConfig.builder().configKey("notification.dailyDigestEnabled").configValue("true").configGroup("notification")
-                .description("启用普通动态摘要；摘要仅补充展示，不替代必达通知").valueType("boolean").sortOrder(9).build()
-        ));
+                // ===== 通知中心 =====
+                SystemConfig.builder()
+                        .configKey("notification.enabled")
+                        .configValue("true")
+                        .configGroup("notification")
+                        .description("启用通知中心（关闭后仅保留已有审计，不创建新通知）")
+                        .valueType("boolean")
+                        .sortOrder(1)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("notification.inAppEnabled")
+                        .configValue("true")
+                        .configGroup("notification")
+                        .description("启用站内通知；关键任务、审核、驳回和催办始终按必达规则处理")
+                        .valueType("boolean")
+                        .sortOrder(2)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("notification.feishuEnabled")
+                        .configValue("false")
+                        .configGroup("notification")
+                        .description("启用飞书机器人外送（需先完成机器人权限、用户 OpenID 和卡片回调配置）")
+                        .valueType("boolean")
+                        .sortOrder(3)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("notification.publicBaseUrl")
+                        .configValue("")
+                        .configGroup("notification")
+                        .description("系统公网访问地址，例如 https://pm.example.com；飞书卡片“查看并处理”将跳转到此地址")
+                        .valueType("text")
+                        .sortOrder(4)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("notification.deliveryRetryLimit")
+                        .configValue("8")
+                        .configGroup("notification")
+                        .description("外部渠道最大重试次数，超出后进入失败队列并告警管理员")
+                        .valueType("number")
+                        .sortOrder(5)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("notification.reminderMinIntervalMinutes")
+                        .configValue("10")
+                        .configGroup("notification")
+                        .description("同一催办人对同一项目或任务的最短催办间隔（分钟）")
+                        .valueType("number")
+                        .sortOrder(6)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("notification.reminderCrossUserMergeMinutes")
+                        .configValue("30")
+                        .configGroup("notification")
+                        .description("不同催办人的展示合并窗口（分钟）；不会删除任何原始审计或必达通知")
+                        .valueType("number")
+                        .sortOrder(7)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("notification.overdueEscalationHours")
+                        .configValue("24")
+                        .configGroup("notification")
+                        .description("逾期后升级提醒负责人或管理员的等待时长（小时）")
+                        .valueType("number")
+                        .sortOrder(8)
+                        .build(),
+                SystemConfig.builder()
+                        .configKey("notification.dailyDigestEnabled")
+                        .configValue("true")
+                        .configGroup("notification")
+                        .description("启用普通动态摘要；摘要仅补充展示，不替代必达通知")
+                        .valueType("boolean")
+                        .sortOrder(9)
+                        .build()));
         addNotificationTemplateDefaults(defaults);
 
         // 只插入缺失的配置项（不覆盖已有值）
@@ -218,24 +512,50 @@ public class AdminService {
     }
 
     private void addNotificationTemplateDefaults(List<SystemConfig> defaults) {
-        String variables = "可用变量：{{projectName}}、{{taskName}}、{{actorName}}、{{deadline}}、{{reason}}、{{deliveryCount}}、{{reviewRole}}、{{targetName}}、{{message}}";
+        String variables =
+                "可用变量：{{projectName}}、{{taskName}}、{{actorName}}、{{deadline}}、{{reason}}、{{deliveryCount}}、{{reviewRole}}、{{targetName}}、{{message}}";
         String[][] templates = {
             {"PROJECT_ASSIGNED", "项目指派", "有新的项目待接单", "“{{projectName}}”已由{{actorName}}指定给你，请及时接单并安排任务。"},
-            {"MATERIAL_MARKET_PLANNER_PENDING", "素材广场待企划接单", "素材广场有新的待接单项目", "销售{{actorName}}已从素材广场选中“{{projectName}}”，请及时接单并安排任务。"},
+            {
+                "MATERIAL_MARKET_PLANNER_PENDING",
+                "素材广场待企划接单",
+                "素材广场有新的待接单项目",
+                "销售{{actorName}}已从素材广场选中“{{projectName}}”，请及时接单并安排任务。"
+            },
             {"TASK_ASSIGNED", "子任务派发", "有新的子任务待处理", "子任务“{{taskName}}”已指派给你，所属项目：{{projectName}}；计划完成：{{deadline}}。"},
-            {"DESIGN_REQUIREMENT_ASSIGNED", "设计送审需求派发", "有新的设计/送审需求", "“{{projectName}}”已由{{actorName}}创建并指定给你，请及时查看并跟进。"},
-            {"DESIGN_REQUIREMENT_DESIGNER_ASSIGNED", "设计需求指派设计师", "有新的设计需求待交付", "“{{projectName}}”已由{{actorName}}指派给你，请在{{deadline}}前完成设计交付。"},
+            {
+                "DESIGN_REQUIREMENT_ASSIGNED",
+                "设计送审需求派发",
+                "有新的设计/送审需求",
+                "“{{projectName}}”已由{{actorName}}创建并指定给你，请及时查看并跟进。"
+            },
+            {
+                "DESIGN_REQUIREMENT_DESIGNER_ASSIGNED",
+                "设计需求指派设计师",
+                "有新的设计需求待交付",
+                "“{{projectName}}”已由{{actorName}}指派给你，请在{{deadline}}前完成设计交付。"
+            },
             {"TASK_REASSIGNED", "子任务改派", "有新的子任务待处理", "子任务“{{taskName}}”已改派给你，所属项目：{{projectName}}；计划完成：{{deadline}}。"},
             {"TASK_ACCEPTED", "子任务接单", "子任务已接单", "{{actorName}}已接单子任务“{{taskName}}”。"},
             {"TASK_DELIVERED", "子任务首次交付", "子任务待审核", "{{actorName}}已交付子任务“{{taskName}}”，请查看成果并完成审核。"},
             {"TASK_SUBMITTED_FOR_REVIEW", "子任务送审", "子任务已送审", "子任务“{{taskName}}”已送审，请进行通过并评分或驳回。"},
             {"DESIGN_REQUIREMENT_DELIVERED", "设计需求交付", "设计需求已交付", "设计师已提交“{{projectName}}”的交付成果，请及时查看。"},
             {"DESIGN_REQUIREMENT_REVIEW_PENDING", "设计需求待复评", "设计需求待复评", "“{{projectName}}”已完成设计师自评，请及时完成复评。"},
-            {"DESIGN_REQUIREMENT_REJECTED", "设计需求驳回", "设计需求已驳回", "“{{projectName}}”已被驳回，原因：{{reason}}。请在{{deadline}}前修改并重新交付。"},
+            {
+                "DESIGN_REQUIREMENT_REJECTED",
+                "设计需求驳回",
+                "设计需求已驳回",
+                "“{{projectName}}”已被驳回，原因：{{reason}}。请在{{deadline}}前修改并重新交付。"
+            },
             {"DESIGN_REQUIREMENT_COMPLETED", "设计需求完成", "设计需求已完成", "“{{projectName}}”已完成全部评分流程。"},
             {"DESIGN_REQUIREMENT_TERMINATED", "设计需求终止", "设计需求已终止", "“{{projectName}}”已由{{actorName}}终止。"},
             {"TASK_REJECTED", "子任务驳回", "子任务已驳回", "子任务“{{taskName}}”被驳回，原因：{{reason}}。请修改后重新交付。"},
-            {"TASK_REDELIVERED", "子任务再次交付", "子任务再次交付待审核", "{{actorName}}已第{{deliveryCount}}次交付“{{taskName}}”。上次驳回原因：{{reason}}。"},
+            {
+                "TASK_REDELIVERED",
+                "子任务再次交付",
+                "子任务再次交付待审核",
+                "{{actorName}}已第{{deliveryCount}}次交付“{{taskName}}”。上次驳回原因：{{reason}}。"
+            },
             {"REVIEW_PENDING", "审核待办", "有审核待办", "项目“{{projectName}}”的子任务“{{taskName}}”等待{{reviewRole}}审核。"},
             {"REVIEW_APPROVED", "审核通过", "审核已通过", "“{{taskName}}”已由{{actorName}}审核通过。"},
             {"REVIEW_REJECTED", "审核驳回", "审核已驳回", "“{{taskName}}”审核未通过，原因：{{reason}}。"},
@@ -248,10 +568,22 @@ public class AdminService {
         int order = 1;
         for (String[] template : templates) {
             String prefix = "notification.template." + template[0];
-            defaults.add(SystemConfig.builder().configKey(prefix + ".title").configValue(template[2]).configGroup("notification_templates")
-                    .description(template[1] + " — 通知标题").valueType("text").sortOrder(order++).build());
-            defaults.add(SystemConfig.builder().configKey(prefix + ".content").configValue(template[3]).configGroup("notification_templates")
-                    .description(template[1] + " — 通知正文；" + variables).valueType("textarea").sortOrder(order++).build());
+            defaults.add(SystemConfig.builder()
+                    .configKey(prefix + ".title")
+                    .configValue(template[2])
+                    .configGroup("notification_templates")
+                    .description(template[1] + " — 通知标题")
+                    .valueType("text")
+                    .sortOrder(order++)
+                    .build());
+            defaults.add(SystemConfig.builder()
+                    .configKey(prefix + ".content")
+                    .configValue(template[3])
+                    .configGroup("notification_templates")
+                    .description(template[1] + " — 通知正文；" + variables)
+                    .valueType("textarea")
+                    .sortOrder(order++)
+                    .build());
         }
     }
 
@@ -267,11 +599,7 @@ public class AdminService {
                         config.setConfigValue("******");
                     }
                 })
-                .collect(Collectors.groupingBy(
-            SystemConfig::getConfigGroup,
-            LinkedHashMap::new,
-            Collectors.toList()
-        ));
+                .collect(Collectors.groupingBy(SystemConfig::getConfigGroup, LinkedHashMap::new, Collectors.toList()));
     }
 
     /** 获取公开配置（无需登录） */
@@ -283,11 +611,20 @@ public class AdminService {
         Map<String, String> result = new LinkedHashMap<>();
         try {
             // 外观相关配置对外公开
-            for (String key : List.of("app.title", "app.logo", "app.logoEmoji", "app.subtitle",
-                                       "login.bg", "login.bgColor", "system.version",
-                                       "feishu.enabled", "feishu.ssoAppId")) {
-                configRepository.findByConfigKey(key).ifPresent(c ->
-                    result.put(c.getConfigKey(), c.getConfigValue() != null ? c.getConfigValue() : ""));
+            for (String key : List.of(
+                    "app.title",
+                    "app.logo",
+                    "app.logoEmoji",
+                    "app.subtitle",
+                    "login.bg",
+                    "login.bgColor",
+                    "system.version",
+                    "feishu.enabled",
+                    "feishu.ssoAppId")) {
+                configRepository
+                        .findByConfigKey(key)
+                        .ifPresent(c ->
+                                result.put(c.getConfigKey(), c.getConfigValue() != null ? c.getConfigValue() : ""));
             }
         } catch (DataAccessException e) {
             if (publicConfigCache != null) return new LinkedHashMap<>(publicConfigCache);
@@ -316,8 +653,7 @@ public class AdminService {
             }
             if ("feishu.base.fieldMappings".equals(key)) validateFeishuFieldMappings(value);
             configRepository.findByConfigKey(entry.getKey()).ifPresent(config -> {
-                if ("password".equalsIgnoreCase(config.getValueType())
-                        && "******".equals(entry.getValue())) {
+                if ("password".equalsIgnoreCase(config.getValueType()) && "******".equals(entry.getValue())) {
                     return;
                 }
                 config.setConfigValue(value);
@@ -336,7 +672,8 @@ public class AdminService {
             Map<String, String> identities = Map.of("project", "项目ID", "task", "子任务ID", "scoring", "评分ID");
             for (Map.Entry<String, String> table : identities.entrySet()) {
                 JsonNode mappings = root.path(table.getKey());
-                if (!mappings.isMissingNode() && !mappings.isObject()) throw new IllegalArgumentException("飞书字段配置格式不正确");
+                if (!mappings.isMissingNode() && !mappings.isObject())
+                    throw new IllegalArgumentException("飞书字段配置格式不正确");
                 Set<String> targets = new HashSet<>();
                 Iterator<Map.Entry<String, JsonNode>> fields = mappings.fields();
                 while (fields.hasNext()) {
@@ -344,8 +681,11 @@ public class AdminService {
                     JsonNode mapping = field.getValue();
                     boolean identity = field.getKey().equals(table.getValue());
                     boolean enabled = identity || mapping.path("enabled").asBoolean(true);
-                    String target = identity ? field.getKey() : mapping.path("target").asText(field.getKey()).trim();
-                    if (enabled && target.isBlank()) throw new IllegalArgumentException("飞书目标列名不能为空: " + field.getKey());
+                    String target = identity
+                            ? field.getKey()
+                            : mapping.path("target").asText(field.getKey()).trim();
+                    if (enabled && target.isBlank())
+                        throw new IllegalArgumentException("飞书目标列名不能为空: " + field.getKey());
                     if (enabled && !targets.add(target)) throw new IllegalArgumentException("飞书目标列名重复: " + target);
                 }
             }
@@ -414,46 +754,60 @@ public class AdminService {
 
     /** 获取所有用户（含详情） */
     public List<Map<String, Object>> getAllUsers() {
-        return userRepository.findAll().stream().map(u -> {
-            Map<String, Object> m = new LinkedHashMap<>();
-            m.put("id", u.getId());
-            m.put("userId", u.getUserId());
-            m.put("name", TextEncodingUtil.repairUtf8Mojibake(u.getName()));
-            m.put("role", u.getRole());
-            m.put("roleLevel", u.getRoleLevel());
-            m.put("title", u.getTitle());
-            m.put("phone", u.getPhone());
-            m.put("email", u.getEmail());
-            m.put("status", u.getStatus() != null ? u.getStatus() : "active");
-            m.put("feishuBound", u.getFeishuOpenId() != null && !u.getFeishuOpenId().isBlank());
-            m.put("createdAt", u.getCreatedAt() != null ? u.getCreatedAt().toString() : "");
-            return m;
-        }).collect(Collectors.toList());
+        return userRepository.findAll().stream()
+                .map(u -> {
+                    Map<String, Object> m = new LinkedHashMap<>();
+                    m.put("id", u.getId());
+                    m.put("userId", u.getUserId());
+                    m.put("name", TextEncodingUtil.repairUtf8Mojibake(u.getName()));
+                    m.put("role", u.getRole());
+                    m.put("roleLevel", u.getRoleLevel());
+                    m.put("title", u.getTitle());
+                    m.put("phone", u.getPhone());
+                    m.put("email", u.getEmail());
+                    m.put("status", u.getStatus() != null ? u.getStatus() : "active");
+                    m.put(
+                            "feishuBound",
+                            u.getFeishuOpenId() != null && !u.getFeishuOpenId().isBlank());
+                    m.put(
+                            "createdAt",
+                            u.getCreatedAt() != null ? u.getCreatedAt().toString() : "");
+                    return m;
+                })
+                .collect(Collectors.toList());
     }
 
-    public PageResponse<Map<String, Object>> getUsersPage(String keyword, String role, String status, Pageable pageable) {
-        Page<User> page = userRepository.searchPage(blankToNull(keyword), blankToNull(role), blankToNull(status), pageable);
+    public PageResponse<Map<String, Object>> getUsersPage(
+            String keyword, String role, String status, Pageable pageable) {
+        Page<User> page =
+                userRepository.searchPage(blankToNull(keyword), blankToNull(role), blankToNull(status), pageable);
         return PageResponse.from(page.map(this::toUserMap));
     }
 
     private Map<String, Object> toUserMap(User u) {
         Map<String, Object> m = new LinkedHashMap<>();
-        m.put("id", u.getId()); m.put("userId", u.getUserId()); m.put("name", TextEncodingUtil.repairUtf8Mojibake(u.getName()));
-        m.put("role", u.getRole()); m.put("roleLevel", u.getRoleLevel()); m.put("title", u.getTitle());
-        m.put("phone", u.getPhone()); m.put("email", u.getEmail());
+        m.put("id", u.getId());
+        m.put("userId", u.getUserId());
+        m.put("name", TextEncodingUtil.repairUtf8Mojibake(u.getName()));
+        m.put("role", u.getRole());
+        m.put("roleLevel", u.getRoleLevel());
+        m.put("title", u.getTitle());
+        m.put("phone", u.getPhone());
+        m.put("email", u.getEmail());
         m.put("status", u.getStatus() != null ? u.getStatus() : "active");
         m.put("feishuBound", u.getFeishuOpenId() != null && !u.getFeishuOpenId().isBlank());
         m.put("createdAt", u.getCreatedAt() != null ? u.getCreatedAt().toString() : "");
         return m;
     }
 
-    private String blankToNull(String value) { return value == null || value.isBlank() ? null : value.trim(); }
+    private String blankToNull(String value) {
+        return value == null || value.isBlank() ? null : value.trim();
+    }
 
     /** 更新用户角色和权限 */
     @Transactional
     public User updateUserRole(Long userId, String newRole, String updatedBy) {
-        User user = userRepository.findById(userId)
-            .orElseThrow(() -> new IllegalArgumentException("用户不存在"));
+        User user = userRepository.findById(userId).orElseThrow(() -> new IllegalArgumentException("用户不存在"));
         newRole = normalizeBusinessRole(newRole);
         Role assignedRole = roleRepository.findByName(newRole).orElse(null);
         if (assignedRole == null && !BUSINESS_ROLES.contains(newRole)) {
@@ -462,32 +816,36 @@ public class AdminService {
         if ("pending".equals(newRole)) {
             throw new IllegalArgumentException("无效的角色");
         }
-        if ("admin".equals(user.getRole()) && !"admin".equals(newRole)
+        if ("admin".equals(user.getRole())
+                && !"admin".equals(newRole)
                 && userRepository.findByRole("admin").stream()
-                        .filter(u -> u.getStatus() == null || !"disabled".equalsIgnoreCase(u.getStatus()))
-                        .count() <= 1) {
+                                .filter(u -> u.getStatus() == null || !"disabled".equalsIgnoreCase(u.getStatus()))
+                                .count()
+                        <= 1) {
             throw new IllegalArgumentException("系统至少需要保留一名启用中的管理员");
         }
         boolean wasPending = "pending".equals(user.getRole()) || "pending".equalsIgnoreCase(user.getStatus());
 
         // 计算 roleLevel
-        Integer level = switch (newRole) {
-            case "admin" -> 0;
-            case "sales" -> 1;
-            case "planner" -> 2;
-            case "designer" -> 3;
-            case "supplychain" -> 3;
-            default -> null;
-        };
+        Integer level =
+                switch (newRole) {
+                    case "admin" -> 0;
+                    case "sales" -> 1;
+                    case "planner" -> 2;
+                    case "designer" -> 3;
+                    case "supplychain" -> 3;
+                    default -> null;
+                };
 
-        String title = switch (newRole) {
-            case "sales" -> "销售";
-            case "planner" -> "产品企划";
-            case "designer" -> "设计师";
-            case "supplychain" -> "供应链";
-            case "admin" -> "系统管理员";
-            default -> assignedRole != null ? assignedRole.getDisplayName() : user.getTitle();
-        };
+        String title =
+                switch (newRole) {
+                    case "sales" -> "销售";
+                    case "planner" -> "产品企划";
+                    case "designer" -> "设计师";
+                    case "supplychain" -> "供应链";
+                    case "admin" -> "系统管理员";
+                    default -> assignedRole != null ? assignedRole.getDisplayName() : user.getTitle();
+                };
 
         user.setRole(newRole);
         user.setRoleLevel(level);
@@ -502,8 +860,7 @@ public class AdminService {
     /** 重置用户密码 */
     @Transactional
     public void resetPassword(Long userId, String newPassword) {
-        User user = userRepository.findById(userId)
-            .orElseThrow(() -> new IllegalArgumentException("用户不存在"));
+        User user = userRepository.findById(userId).orElseThrow(() -> new IllegalArgumentException("用户不存在"));
         if (!SecurityUtil.isValidPassword(newPassword)) {
             throw new IllegalArgumentException("密码长度须为6-72位");
         }
@@ -515,13 +872,16 @@ public class AdminService {
     /** 删除用户 */
     @Transactional
     public void deleteUser(Long userId) {
-        User user = userRepository.findById(userId)
-            .orElseThrow(() -> new IllegalArgumentException("用户不存在"));
+        User user = userRepository.findById(userId).orElseThrow(() -> new IllegalArgumentException("用户不存在"));
         // 删除用户时同步清理配置型数据，避免积分配置页出现“未命名”孤立行。
-        entityManager.createNativeQuery("DELETE FROM standard_point_configs WHERE config_code = :userId")
-                .setParameter("userId", user.getUserId()).executeUpdate();
-        entityManager.createNativeQuery("DELETE FROM monthly_user_point_targets WHERE user_id = :userId")
-                .setParameter("userId", user.getUserId()).executeUpdate();
+        entityManager
+                .createNativeQuery("DELETE FROM standard_point_configs WHERE config_code = :userId")
+                .setParameter("userId", user.getUserId())
+                .executeUpdate();
+        entityManager
+                .createNativeQuery("DELETE FROM monthly_user_point_targets WHERE user_id = :userId")
+                .setParameter("userId", user.getUserId())
+                .executeUpdate();
         userRepository.delete(user);
         AuthSessions.clearUserTokens(user.getUserId());
         userService.refreshCache();
@@ -530,8 +890,7 @@ public class AdminService {
     /** 编辑用户资料（userId、name、phone、email、password） */
     @Transactional
     public Map<String, Object> updateUser(Long userId, Map<String, String> fields) {
-        User user = userRepository.findById(userId)
-            .orElseThrow(() -> new IllegalArgumentException("用户不存在"));
+        User user = userRepository.findById(userId).orElseThrow(() -> new IllegalArgumentException("用户不存在"));
         boolean roleChanged = false;
         boolean wasPending = "pending".equals(user.getRole()) || "pending".equalsIgnoreCase(user.getStatus());
 
@@ -602,22 +961,24 @@ public class AdminService {
             if (!List.of("admin", "sales", "planner", "designer", "supplychain").contains(newRole)) {
                 throw new IllegalArgumentException("无效的角色");
             }
-            Integer level = switch (newRole) {
-                case "admin" -> 0;
-                case "sales" -> 1;
-                case "planner" -> 2;
-                case "designer" -> 3;
-            case "supplychain" -> 3;
-                default -> null;
-            };
-            String title = switch (newRole) {
-                case "admin" -> "系统管理员";
-                case "sales" -> "销售";
-                case "planner" -> "产品企划";
-                case "designer" -> "设计师";
-            case "supplychain" -> "供应链";
-                default -> user.getTitle();
-            };
+            Integer level =
+                    switch (newRole) {
+                        case "admin" -> 0;
+                        case "sales" -> 1;
+                        case "planner" -> 2;
+                        case "designer" -> 3;
+                        case "supplychain" -> 3;
+                        default -> null;
+                    };
+            String title =
+                    switch (newRole) {
+                        case "admin" -> "系统管理员";
+                        case "sales" -> "销售";
+                        case "planner" -> "产品企划";
+                        case "designer" -> "设计师";
+                        case "supplychain" -> "供应链";
+                        default -> user.getTitle();
+                    };
             user.setRole(newRole);
             user.setRoleLevel(level);
             user.setTitle(title);
@@ -644,8 +1005,7 @@ public class AdminService {
     /** 切换账号启用/停用状态 */
     @Transactional
     public User toggleUserStatus(Long userId) {
-        User user = userRepository.findById(userId)
-            .orElseThrow(() -> new IllegalArgumentException("用户不存在"));
+        User user = userRepository.findById(userId).orElseThrow(() -> new IllegalArgumentException("用户不存在"));
         String current = user.getStatus() != null ? user.getStatus() : "active";
         if ("disabled".equals(current)) {
             user.setStatus("active");
@@ -689,73 +1049,109 @@ public class AdminService {
         record RoleDef(String name, String displayName, String description, String[] perms) {}
 
         RoleDef[] defs = {
-            new RoleDef("admin", "系统管理员", "拥有系统全部权限，可管理用户、角色和系统配置",
-                new String[]{"dashboard:view","project:view","project:create","project:edit",
-                    "task:view","task:assign","task:execute","task:approve","task:reject",
-                    "scoring:view","scoring:submit",
-                    "admin:dashboard","admin:config","admin:users","admin:roles","file:upload"}),
-            new RoleDef("sales", "销售", "查看项目、发起渠道定制需求、执行子任务和评分",
-                new String[]{"dashboard:view","project:view","project:create",
-                    "task:view","task:execute","scoring:view","scoring:submit","file:upload"}),
-            new RoleDef("planner", "产品企划", "管理项目和子任务全流程，含分配、验收和评分",
-                new String[]{"dashboard:view","project:view","project:create","project:edit",
-                    "task:view","task:assign","task:approve","task:reject",
-                    "scoring:view","scoring:submit","file:upload"}),
-            new RoleDef("designer", "设计师", "接单执行设计任务并交付成果",
-                new String[]{"dashboard:view","project:view",
-                    "task:view","task:execute","file:upload"}),
-            new RoleDef("supplychain", "供应链", "接单执行供应链任务并交付成果",
-                new String[]{"dashboard:view","project:view",
-                    "task:view","task:execute","file:upload"}),
+            new RoleDef("admin", "系统管理员", "拥有系统全部权限，可管理用户、角色和系统配置", new String[] {
+                "dashboard:view",
+                "project:view",
+                "project:create",
+                "project:edit",
+                "task:view",
+                "task:assign",
+                "task:execute",
+                "task:approve",
+                "task:reject",
+                "scoring:view",
+                "scoring:submit",
+                "admin:dashboard",
+                "admin:config",
+                "admin:users",
+                "admin:roles",
+                "file:upload"
+            }),
+            new RoleDef("sales", "销售", "查看项目、发起渠道定制需求、执行子任务和评分", new String[] {
+                "dashboard:view",
+                "project:view",
+                "project:create",
+                "task:view",
+                "task:execute",
+                "scoring:view",
+                "scoring:submit",
+                "file:upload"
+            }),
+            new RoleDef("planner", "产品企划", "管理项目和子任务全流程，含分配、验收和评分", new String[] {
+                "dashboard:view",
+                "project:view",
+                "project:create",
+                "project:edit",
+                "task:view",
+                "task:assign",
+                "task:approve",
+                "task:reject",
+                "scoring:view",
+                "scoring:submit",
+                "file:upload"
+            }),
+            new RoleDef("designer", "设计师", "接单执行设计任务并交付成果", new String[] {
+                "dashboard:view", "project:view", "task:view", "task:execute", "file:upload"
+            }),
+            new RoleDef("supplychain", "供应链", "接单执行供应链任务并交付成果", new String[] {
+                "dashboard:view", "project:view", "task:view", "task:execute", "file:upload"
+            }),
         };
 
         List<Role> roles = new ArrayList<>();
         java.time.LocalDateTime now = java.time.LocalDateTime.now();
         for (RoleDef d : defs) {
             roles.add(Role.builder()
-                .name(d.name())
-                .displayName(d.displayName())
-                .description(d.description())
-                .permissions(String.join(",", d.perms()))
-                .isSystem(true)
-                .createdAt(now)
-                .updatedAt(now)
-                .build());
+                    .name(d.name())
+                    .displayName(d.displayName())
+                    .description(d.description())
+                    .permissions(String.join(",", d.perms()))
+                    .isSystem(true)
+                    .createdAt(now)
+                    .updatedAt(now)
+                    .build());
         }
         roleRepository.saveAll(roles);
     }
 
     /** 获取所有角色 */
     public List<Map<String, Object>> getAllRoles() {
-        return roleRepository.findAll().stream().map(r -> {
-            Map<String, Object> m = new LinkedHashMap<>();
-            m.put("id", r.getId());
-            m.put("name", r.getName());
-            m.put("displayName", r.getDisplayName());
-            m.put("description", r.getDescription());
-            m.put("permissions", r.getPermissions() != null
-                ? Arrays.asList(r.getPermissions().split(","))
-                : List.of());
-            m.put("isSystem", r.getIsSystem());
-            m.put("createdAt", r.getCreatedAt() != null ? r.getCreatedAt().toString() : "");
-            return m;
-        }).collect(Collectors.toList());
+        return roleRepository.findAll().stream()
+                .map(r -> {
+                    Map<String, Object> m = new LinkedHashMap<>();
+                    m.put("id", r.getId());
+                    m.put("name", r.getName());
+                    m.put("displayName", r.getDisplayName());
+                    m.put("description", r.getDescription());
+                    m.put(
+                            "permissions",
+                            r.getPermissions() != null
+                                    ? Arrays.asList(r.getPermissions().split(","))
+                                    : List.of());
+                    m.put("isSystem", r.getIsSystem());
+                    m.put(
+                            "createdAt",
+                            r.getCreatedAt() != null ? r.getCreatedAt().toString() : "");
+                    return m;
+                })
+                .collect(Collectors.toList());
     }
 
     /** 创建角色 */
     @Transactional
-    public Map<String, Object> createRole(String name, String displayName, String description, List<String> permissions) {
+    public Map<String, Object> createRole(
+            String name, String displayName, String description, List<String> permissions) {
         if (name == null || name.isBlank()) throw new IllegalArgumentException("角色标识不能为空");
         if (displayName == null || displayName.isBlank()) throw new IllegalArgumentException("角色名称不能为空");
         if (roleRepository.existsByName(name)) throw new IllegalArgumentException("角色标识「" + name + "」已存在");
 
         Role role = Role.builder()
-            .name(SecurityUtil.sanitizeText(name, 50))
-            .displayName(SecurityUtil.sanitizeText(displayName, 100))
-            .description(SecurityUtil.sanitizeText(description != null ? description : "", 255))
-            .permissions(permissions != null ? String.join(",", permissions) : "")
-            .isSystem(false)
-            .build();
+                .name(SecurityUtil.sanitizeText(name, 50))
+                .displayName(SecurityUtil.sanitizeText(displayName, 100))
+                .description(SecurityUtil.sanitizeText(description != null ? description : "", 255))
+                .permissions(permissions != null ? String.join(",", permissions) : "")
+                .isSystem(false)
+                .build();
         role = roleRepository.save(role);
 
         Map<String, Object> result = new LinkedHashMap<>();
@@ -763,20 +1159,23 @@ public class AdminService {
         result.put("name", role.getName());
         result.put("displayName", role.getDisplayName());
         result.put("description", role.getDescription());
-        result.put("permissions", role.getPermissions() != null
-            ? Arrays.asList(role.getPermissions().split(","))
-            : List.of());
+        result.put(
+                "permissions",
+                role.getPermissions() != null
+                        ? Arrays.asList(role.getPermissions().split(","))
+                        : List.of());
         result.put("isSystem", false);
         return result;
     }
 
     /** 更新角色 */
     @Transactional
-    public Map<String, Object> updateRole(Long roleId, String displayName, String description, List<String> permissions) {
-        Role role = roleRepository.findById(roleId)
-            .orElseThrow(() -> new IllegalArgumentException("角色不存在"));
+    public Map<String, Object> updateRole(
+            Long roleId, String displayName, String description, List<String> permissions) {
+        Role role = roleRepository.findById(roleId).orElseThrow(() -> new IllegalArgumentException("角色不存在"));
 
-        if (displayName != null && !displayName.isBlank()) role.setDisplayName(SecurityUtil.sanitizeText(displayName, 100));
+        if (displayName != null && !displayName.isBlank())
+            role.setDisplayName(SecurityUtil.sanitizeText(displayName, 100));
         if (description != null) role.setDescription(SecurityUtil.sanitizeText(description, 255));
         if (permissions != null) role.setPermissions(String.join(",", permissions));
 
@@ -787,9 +1186,11 @@ public class AdminService {
         result.put("name", role.getName());
         result.put("displayName", role.getDisplayName());
         result.put("description", role.getDescription());
-        result.put("permissions", role.getPermissions() != null
-            ? Arrays.asList(role.getPermissions().split(","))
-            : List.of());
+        result.put(
+                "permissions",
+                role.getPermissions() != null
+                        ? Arrays.asList(role.getPermissions().split(","))
+                        : List.of());
         result.put("isSystem", role.getIsSystem());
         return result;
     }
@@ -797,8 +1198,7 @@ public class AdminService {
     /** 删除角色 */
     @Transactional
     public void deleteRole(Long roleId) {
-        Role role = roleRepository.findById(roleId)
-            .orElseThrow(() -> new IllegalArgumentException("角色不存在"));
+        Role role = roleRepository.findById(roleId).orElseThrow(() -> new IllegalArgumentException("角色不存在"));
         // 检查是否有用户正在使用该角色
         if (userRepository.findByRole(role.getName()).size() > 0) {
             throw new IllegalArgumentException("该角色下还有用户，无法删除。请先变更用户的角色");
@@ -831,13 +1231,21 @@ public class AdminService {
 
         // 按 FK 依赖顺序删除：子表 → 父表
         try {
-            deleted += entityManager.createNativeQuery("DELETE FROM scoring_records").executeUpdate();
-            deleted += entityManager.createNativeQuery("DELETE FROM activity_logs").executeUpdate();
+            deleted += entityManager
+                    .createNativeQuery("DELETE FROM scoring_records")
+                    .executeUpdate();
+            deleted +=
+                    entityManager.createNativeQuery("DELETE FROM activity_logs").executeUpdate();
             deleted += entityManager.createNativeQuery("DELETE FROM sub_tasks").executeUpdate();
             deleted += entityManager.createNativeQuery("DELETE FROM projects").executeUpdate();
-            deleted += entityManager.createNativeQuery("DELETE FROM product_categories").executeUpdate();
-            deleted += entityManager.createNativeQuery("DELETE FROM compliance_items").executeUpdate();
-            deleted += entityManager.createNativeQuery("DELETE FROM price_ranges").executeUpdate();
+            deleted += entityManager
+                    .createNativeQuery("DELETE FROM product_categories")
+                    .executeUpdate();
+            deleted += entityManager
+                    .createNativeQuery("DELETE FROM compliance_items")
+                    .executeUpdate();
+            deleted +=
+                    entityManager.createNativeQuery("DELETE FROM price_ranges").executeUpdate();
 
             result.put("success", true);
             result.put("deletedRows", deleted);
@@ -853,12 +1261,10 @@ public class AdminService {
 
     private static final String[] SCORING_ROLES = {"planner", "sales", "designer", "admin"};
     private static final String[] PROJECT_TYPES = {"channel_custom", "regular"};
-    private static final Map<String, String> SCORING_ROLE_LABELS = Map.of(
-        "planner", "企划", "sales", "销售", "designer", "设计师", "admin", "管理"
-    );
-    private static final Map<String, String> PROJECT_TYPE_LABELS = Map.of(
-        "channel_custom", "渠道定制单", "regular", "公司常规品"
-    );
+    private static final Map<String, String> SCORING_ROLE_LABELS =
+            Map.of("planner", "企划", "sales", "销售", "designer", "设计师", "admin", "管理");
+    private static final Map<String, String> PROJECT_TYPE_LABELS =
+            Map.of("channel_custom", "渠道定制单", "regular", "公司常规品");
 
     /** 获取所有评分权重（按项目类型分组，百分比） */
     public Map<String, Object> getScoringWeights() {
@@ -872,7 +1278,8 @@ public class AdminService {
             for (String role : SCORING_ROLES) {
                 String key = "scoring." + pt + "." + role;
                 Optional<SystemConfig> opt = configRepository.findByConfigKey(key);
-                double pct = opt.isPresent() ? Double.parseDouble(opt.get().getConfigValue()) : getDefaultWeight(pt, role);
+                double pct =
+                        opt.isPresent() ? Double.parseDouble(opt.get().getConfigValue()) : getDefaultWeight(pt, role);
                 Map<String, Object> item = new LinkedHashMap<>();
                 item.put("role", role);
                 item.put("label", SCORING_ROLE_LABELS.getOrDefault(role, role));
@@ -943,8 +1350,15 @@ public class AdminService {
     /** 获取指定项目类型的角色评分权重百分比 */
     public double getScoringWeight(String projectType, String role) {
         String key = "scoring." + projectType + "." + role;
-        return configRepository.findByConfigKey(key)
-            .map(c -> { try { return Double.parseDouble(c.getConfigValue()); } catch (Exception e) { return getDefaultWeight(projectType, role); } })
-            .orElseGet(() -> getDefaultWeight(projectType, role));
+        return configRepository
+                .findByConfigKey(key)
+                .map(c -> {
+                    try {
+                        return Double.parseDouble(c.getConfigValue());
+                    } catch (Exception e) {
+                        return getDefaultWeight(projectType, role);
+                    }
+                })
+                .orElseGet(() -> getDefaultWeight(projectType, role));
     }
 }
